--- a/index.html
+++ b/index.html
@@ -14,5 +14,17 @@
             <button><li>Contact</li></button>
         </ul>
     </nav>
+    <div class="img-center">
+        <img src="assets/avatar.jpg" alt="avatar" class="avatar" >
+    </div>
+
+
+    <section class="main">
+        <div class="item item-1 welcome">
+            <h2>Welcome to my website!</h2>
+            
+        </div>
+        <div class="item item-2"></div>
+    </section>
 </body>
 </html>
