--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <section class="main">
         <div class="item item-1 welcome">
             <h2>Welcome to my website!</h2>
-            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa sequi vel a? Consequatur repellendus vero eius iusto nihil sit ea!</p>
+            <p>Numquam recusandae, ex consequatur quaerat, quae illo odio alias accusamus dolorum blanditiis nostrum fugit saepe! Dolorem, labore eveniet. A, possimus?</p>
+            <p>Nam labore fugit totam impedit soluta, rerum quod corrupti. Labore aliquid doloremque culpa quod facilis cumque adipisci beatae ad eius.</p>
+            <p>Amet quod, quibusdam vitae id dignissimos doloribus corrupti voluptates nam animi sapiente explicabo nemo hic iusto, recusandae sequi quam quidem.</p>
+            <p>Quod incidunt explicabo quam, esse vero labore id voluptatem culpa voluptate eum, commodi illum vitae accusantium voluptates deleniti nostrum. Ex.</p>
         </div>
         <div class="item item-2"></div>
     </section>
