--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
             <li>Contact</li>
         </ul>
     </nav>
-    <div class="img-center">
-        <img src="assets/avatar.jpg" alt="avatar" class="avatar" >
-    </div>
-
     <section class="main">
-        <div class="item item-1 welcome">
-         
+        <div class="item stack">
+         <h2>Front-end and Back-end Developer</h2>
         </div>
-        <div class="item item-2"></div>
+        <div class="img-center">
+            <img src="assets/avatar.jpg" alt="avatar" class="avatar" >
+        </div>
+        <div class="item something"></div>
     </section>
 </body>
 </html>
