--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <section class="main">
         <div class="item stack">
          <h2>Front-end and Back-end Developer</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, nam.</p>
         </div>
         <div class="img-center">
             <img src="assets/avatar.jpg" alt="avatar" class="avatar" >
