--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
         </ul>
     </nav>
     <section class="main">
-        <div class="item stack">
+        <div class="stack">
          <h2>Front-end and Back-end Developer</h2>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, nam.</p>
         </div>
         <div class="img-center">
             <img src="assets/avatar.jpg" alt="avatar" class="avatar" >
         </div>
-        <div class="item something"></div>
     </section>
+    <div class="bubbles">
+        <div class="items item-1"></div>
+        <div class="items item-2"></div>
+        <div class="items item-3"></div>
+    </div>
+    
 </body>
 </html>
