adding more divs

--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
             <img src="assets/avatar.jpg" alt="avatar" class="avatar" >
         </div>
     </section>
+
     <div class="bubbles">
         <div class="items item-1"></div>
         <div class="items item-2"></div>
         <div class="items item-3"></div>
     </div>
+    <section class="body-contents">
+        <div></div>
+    </section>
     
 </body>
 </html>
