added a new div

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="items item-3"></div>
     </div>
     <section class="body-contents">
-        <div></div>
+        <div class="main-container"></div>
     </section>
     
 </body>
