added a new main section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     </div>
     <section class="body-contents">
         <div class="main-container"></div>
+        <div class="main-container"></div>
+        <div class="main-container"></div>
     </section>
     
 </body>
